--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Omatsuri",
+  "name": "omatsuri",
   "version": "1.0.0",
   "description": "Open source frontend focused tools",
   "repository": "https://github.com/rtivital/tools.git",
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "npm run clean && webpack-dev-server",
+    "start": "npm run clean && webpack-dev-server --host 0.0.0.0",
     "build": "npm run clean && cross-env NODE_ENV=production webpack --progress",
     "clean": "rimraf ./dist",
     "deploy": "npm run build && gh-pages -d dist",
